@@ -6,6 +6,10 @@ format provided for each entry.
 Al
 ------------------------------------------------------------------------------
 
+Wed Aug 22 23:25:57 GMT 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
+
+	* Fixed systax error in arch/i86/kernel/printreg.c
+
 Wed Aug 22 21:35:29 GMT 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
 
 	* Added the needed functionality to enable processes to get info and 
